--- a/element/element.html
+++ b/element/element.html
@@ -11,17 +11,17 @@
                 <div class="element">수소</div>
             </div>
             <a class="element-none1"></a>
-            <div class="element-noble element-box">
+            <div class="element-inert element-box">
                 <div class="number">2</div>
                 <div class="sign">He</div>
                 <div class="element">헬륨</div>
             </div>
-            <div class="element-alkali1 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">3</div>
                 <div class="sign">Li</div>
                 <div class="element">리튬</div>
             </div>
-            <div class="element-alkali2 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">4</div>
                 <div class="sign">Be</div>
                 <div class="element">베릴륨</div>
@@ -52,23 +52,23 @@
                 <div class="sign">F</div>
                 <div class="element">플루오린</div>
             </div>
-            <div class="element-noble element-box">
+            <div class="element-inert element-box">
                 <div class="number">10</div>
                 <div class="sign">Ne</div>
                 <div class="element">네온</div>
             </div>
-            <div class="element-alkali1 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">11</div>
                 <div class="sign">Na</div>
                 <div class="element">나트륨</div>
             </div>
-            <div class="element-alkali2 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">12</div>
                 <div class="sign">Mg</div>
                 <div class="element">마그네슘</div>
             </div>
             <a class="element-none2"></a>
-            <div class="element-transition2 element-box">
+            <div class="element-metal element-box">
                 <div class="number">13</div>
                 <div class="sign">Al</div>
                 <div class="element">알류미늄</div>
@@ -93,72 +93,72 @@
                 <div class="sign">Cl</div>
                 <div class="element">염소</div>
             </div>
-            <div class="element-noble element-box">
+            <div class="element-inert element-box">
                 <div class="number">18</div>
                 <div class="sign">Ar</div>
                 <div class="element">아르곤</div>
             </div>
-            <div class="element-alkali1 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">19</div>
                 <div class="sign">K</div>
                 <div class="element">칼륨</div>
             </div>
-            <div class="element-alkali2 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">20</div>
                 <div class="sign">Ca</div>
                 <div class="element">칼슘</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">21</div>
                 <div class="sign">Sc</div>
                 <div class="element">스칸듐</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">22</div>
                 <div class="sign">Ti</div>
                 <div class="element">타이타늄</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">23</div>
                 <div class="sign">V</div>
                 <div class="element">바나듐</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">24</div>
                 <div class="sign">Cr</div>
                 <div class="element">크로뮴</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">25</div>
                 <div class="sign">Mn</div>
                 <div class="element">망가니즈</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">26</div>
                 <div class="sign">Fe</div>
                 <div class="element">철</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">27</div>
                 <div class="sign">Co</div>
                 <div class="element">코발트</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">28</div>
                 <div class="sign">Ni</div>
                 <div class="element">니켈</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">29</div>
                 <div class="sign">Cu</div>
                 <div class="element">구리</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">30</div>
                 <div class="sign">Zn</div>
                 <div class="element">아연</div>
             </div>
-            <div class="element-transition2 element-box">
+            <div class="element-metal element-box">
                 <div class="number">31</div>
                 <div class="sign">Ga</div>
                 <div class="element">갈륨</div>
@@ -183,77 +183,77 @@
                 <div class="sign">Br</div>
                 <div class="element">브로민</div>
             </div>
-            <div class="element-noble element-box">
+            <div class="element-inert element-box">
                 <div class="number">36</div>
                 <div class="sign">Kr</div>
                 <div class="element">크립톤</div>
             </div>
-            <div class="element-alkali1 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">37</div>
                 <div class="sign">Rb</div>
                 <div class="element">루비듐</div>
             </div>
-            <div class="element-alkali2 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">38</div>
                 <div class="sign">Sr</div>
                 <div class="element">스트론튬</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">39</div>
                 <div class="sign">Y</div>
                 <div class="element">이트륨</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">40</div>
                 <div class="sign">Zr</div>
                 <div class="element">지르코늄</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">41</div>
                 <div class="sign">Nb</div>
                 <div class="element">나이오븀</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">42</div>
                 <div class="sign">Mo</div>
                 <div class="element">몰리브데넘</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">43</div>
                 <div class="sign">Tc</div>
                 <div class="element">테크네튬</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">44</div>
                 <div class="sign">Ru</div>
                 <div class="element">루테늄</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">45</div>
                 <div class="sign">Rh</div>
                 <div class="element">로듐</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">46</div>
                 <div class="sign">Pd</div>
                 <div class="element">팔라듐</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">47</div>
                 <div class="sign">Ag</div>
                 <div class="element">은</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">48</div>
                 <div class="sign">Cd</div>
                 <div class="element">카드뮴</div>
             </div>
-            <div class="element-transition2 element-box">
+            <div class="element-metal element-box">
                 <div class="number">49</div>
                 <div class="sign">In</div>
                 <div class="element">인듐</div>
             </div>
-            <div class="element-transition2 element-box">
+            <div class="element-metal element-box">
                 <div class="number">50</div>
                 <div class="sign">Sn</div>
                 <div class="element">주석</div>
@@ -273,17 +273,17 @@
                 <div class="sign">I</div>
                 <div class="element">아이오딘</div>
             </div>
-            <div class="element-noble element-box">
+            <div class="element-inert element-box">
                 <div class="number">54</div>
                 <div class="sign">Xe</div>
                 <div class="element">제논</div>
             </div>
-            <div class="element-alkali1 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">55</div>
                 <div class="sign">Cs</div>
                 <div class="element">세슘</div>
             </div>
-            <div class="element-alkali2 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">56</div>
                 <div class="sign">Ba</div>
                 <div class="element">바륨</div>
@@ -291,67 +291,67 @@
             <div class="simple" style="background: #FFBFFF;">
                 57 ~ 71
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">72</div>
                 <div class="sign">Hf</div>
                 <div class="element">하프늄</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">73</div>
                 <div class="sign">Ta</div>
                 <div class="element">탄탈럼</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">74</div>
                 <div class="sign">W</div>
                 <div class="element">텅스텐</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">75</div>
                 <div class="sign">Re</div>
                 <div class="element">레늄</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">76</div>
                 <div class="sign">Os</div>
                 <div class="element">오스뮴</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">77</div>
                 <div class="sign">Ir</div>
                 <div class="element">이리듐</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">78</div>
                 <div class="sign">Pt</div>
                 <div class="element">백금</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">79</div>
                 <div class="sign">Au</div>
                 <div class="element">금</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">80</div>
                 <div class="sign">Hg</div>
                 <div class="element">수은</div>
             </div>
-            <div class="element-transition2 element-box">
+            <div class="element-metal element-box">
                 <div class="number">81</div>
                 <div class="sign">Tl</div>
                 <div class="element">탈륨</div>
             </div>
-            <div class="element-transition2 element-box">
+            <div class="element-metal element-box">
                 <div class="number">82</div>
                 <div class="sign">Pb</div>
                 <div class="element">납</div>
             </div>
-            <div class="element-transition2 element-box">
+            <div class="element-metal element-box">
                 <div class="number">83</div>
                 <div class="sign">Bi</div>
                 <div class="element">비스무트</div>
             </div>
-            <div class="element-transition2 element-box">
+            <div class="element-metal element-box">
                 <div class="number">84</div>
                 <div class="sign">Po</div>
                 <div class="element">폴로늄</div>
@@ -361,17 +361,17 @@
                 <div class="sign">At</div>
                 <div class="element">아스타틴</div>
             </div>
-            <div class="element-noble element-box">
+            <div class="element-inert element-box">
                 <div class="number">86</div>
                 <div class="sign">Rn</div>
                 <div class="element">라돈</div>
             </div>
-            <div class="element-alkali1 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">87</div>
                 <div class="sign">Fr</div>
                 <div class="element">프랑슘</div>
             </div>
-            <div class="element-alkali2 element-box">
+            <div class="element-alkali element-box">
                 <div class="number">88</div>
                 <div class="sign">Ra</div>
                 <div class="element">라듐</div>
@@ -379,27 +379,27 @@
             <div class="simple" style="background: #FF99CC;">
                 89 ~ 103
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">104</div>
                 <div class="sign">Rf</div>
                 <div class="element">러더포듐</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">105</div>
                 <div class="sign">Db</div>
                 <div class="element">더브늄</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">106</div>
                 <div class="sign">Sg</div>
                 <div class="element">시보귬</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">107</div>
                 <div class="sign">Bh</div>
                 <div class="element">보륨</div>
             </div>
-            <div class="element-transition1 element-box">
+            <div class="element-metal element-box">
                 <div class="number">108</div>
                 <div class="sign">Hs</div>
                 <div class="element">하슘</div>
