--- a/element/element.html
+++ b/element/element.html
@@ -623,7 +623,7 @@
                 </div>
             </div>
             <div class="explanation">
-                설명글
+                설명글asdf
             </div>
             <button class="exitButton">X</button>
         </div>
